manifests/base/currency/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: currencyservice
  namespace: currencyservice
spec:
  host: currencyservice.currencyservice.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
