manifests/base/currency/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: currencyservice
  namespace: currencyservice
spec:
  hosts:
    - currencyservice.currencyservice.svc.cluster.local
  http:
    - route:
        - destination:
            host: currencyservice.currencyservice.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: currencyservice.currencyservice.svc.cluster.local
            subset: v2
          weight: 10
